# presentation-code-coverage

./: .coverage  .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  .testmondata  makefile  pyproject.toml
project/module_a/: core.py
scripts/: covyore.py
tests/: test_module_a.py  test_presentation_code_coverage.py
tooling/: covyore.py
