[tool.poetry]
name = "presentation-code-coverage"
version = "0.1.0"
description = ""
authors = ["landeholt <johnlan@kth.se>"]

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.3.1"
pytest-picked = "^0.4.6"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
