[tool.poetry]
name = "presentation-code-coverage"
version = "0.1.0"
description = ""
authors = ["landeholt <johnlan@kth.se>"]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.0.4"

[tool.coverage]
fail_under = 0.5

[tool.poetry.dev-dependencies]
pytest = "^5.2"
pytest-watch = "^4.2.0"
pytest-testmon = "^1.3.1"
pytest-picked = "^0.4.6"
pre-commit = "^2.17.0"
coverage = {extras = ["toml"], version = "^6.3.2"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
